--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.12.1
 bcrypt==5.0.0
 certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.3.1
 dnspython==2.8.0
 email-validator==2.3.0
@@ -35,6 +36,7 @@ PyJWT==2.10.1
 python-dotenv==1.2.1
 python-multipart==0.0.22
 PyYAML==6.0.3
+requests==2.32.5
 rich==14.3.1
 rich-toolkit==0.17.1
 rignore==0.7.6
